add hw_6